force-app/main/default/objects/AIG_Milestone_Template__mdt/AIG_Milestone_Template__mdt.object-meta.xml
<CustomObject>
    <label>Milestone Template</label>
    <pluralLabel>Milestone Templates</pluralLabel>
</CustomObject>