force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Active__c.field-meta.xml
<CustomField>
    <fullName>AIG_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>