force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>AIG_Criteria_Name__c</fullName>
    <label>Criteria Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GreaterThan100m</fullName>
                <default>true</default>
                <label>GreaterThan100m</label>
            </value>
            <value>
                <fullName>GreaterThan100mHardCopy</fullName>
            </value>
            <value>
                <fullName>LessThan100mHardCopy</fullName>
            </value>
            <value>
                <fullName>LessThan100m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>