force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Days_After__c.field-meta.xml
<CustomField>
    <fullName>AIG_Days_After__c</fullName>
    <label>Days After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>