force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Dependency__c.field-meta.xml
<CustomField>
    <fullName>AIG_Dependency__c</fullName>
    <description>This will tell which among &apos;Key Date&apos; or &apos;Related Task&apos; is to be picked to calculate the due date/target date.</description>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Date</fullName>
                <default>true</default>
                <label>Key Date</label>
            </value>
            <value>
                <fullName>Related Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>