force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Key_Date__c.field-meta.xml
<CustomField>
    <fullName>AIG_Key_Date__c</fullName>
    <description>The API name of the field from which the task due date is to be calculated.</description>
    <label>Key Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>