force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Milestone__c.field-meta.xml
<CustomField>
    <fullName>AIG_Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid Decision Date</fullName>
                <default>true</default>
                <label>Bid Decision Date</label>
            </value>
            <value>
                <fullName>Strategy Call Date</fullName>
            </value>
            <value>
                <fullName>Executive Review Meeting</fullName>
            </value>
            <value>
                <fullName>Write-Up Due Date</fullName>
            </value>
            <value>
                <fullName>Draft Proposal Creation Date</fullName>
            </value>
            <value>
                <fullName>Draft Proposal Review Date</fullName>
            </value>
            <value>
                <fullName>Sales Lead Review Date</fullName>
            </value>
            <value>
                <fullName>Final Proposal Due Date</fullName>
            </value>
            <value>
                <fullName>Proposal Ship Date</fullName>
            </value>
            <value>
                <fullName>Preliminary Pricing Due Date</fullName>
            </value>
            <value>
                <fullName>Pricing Review Call Date</fullName>
            </value>
            <value>
                <fullName>Proposal Population &amp; Actuary Review Date</fullName>
            </value>
            <value>
                <fullName>Pricing Population &amp; Actuary Review Date</fullName>
            </value>
            <value>
                <fullName>Preliminary Pricing</fullName>
                <isActive>false</isActive>
                <label>Preliminary Pricing</label>
            </value>
            <value>
                <fullName>Pricing Population &amp; Actuary Review</fullName>
                <isActive>false</isActive>
                <label>Pricing Population &amp; Actuary Review</label>
            </value>
            <value>
                <fullName>Pricing Review Call</fullName>
                <isActive>false</isActive>
                <label>Pricing Review Call</label>
            </value>
            <value>
                <fullName>Proposal Population &amp; Actuary Review</fullName>
                <isActive>false</isActive>
                <label>Proposal Population &amp; Actuary Review</label>
            </value>
            <value>
                <fullName>Strategy Call</fullName>
                <isActive>false</isActive>
                <label>Strategy Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>