force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Milestone_Sequence__c.field-meta.xml
<CustomField>
    <fullName>AIG_Milestone_Sequence__c</fullName>
    <label>Milestone Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>