force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Timeline</fullName>
                <default>true</default>
                <label>Pricing Timeline</label>
            </value>
            <value>
                <fullName>Proposal Timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>