force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_Related_Milestone__c.field-meta.xml
<CustomField>
    <fullName>AIG_Related_Milestone__c</fullName>
    <description>This will specify the preceding task milestone name</description>
    <label>Related Milestone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>