force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_SobjectType__c.field-meta.xml
<CustomField>
    <fullName>AIG_SobjectType__c</fullName>
    <description>Object related to milestone</description>
    <label>Sobject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Milestone_Templates</relationshipLabel>
    <relationshipName>Milestone_Templates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>