force-app/main/default/objects/AIG_Milestone_Template__mdt/fields/AIG_User_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milestone Pricing User</fullName>
                <default>true</default>
                <label>Milestone Pricing User</label>
            </value>
            <value>
                <fullName>Milestone Proposal User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>