force-app/main/default/objects/AIG_Milestone_Template__mdt/validationRules/AIG_Key_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_Key_Date_Required</fullName>
    <active>true</active>
    <description>Key Date is required if Dependency is selected as Key Date</description>
    <errorConditionFormula>AND(
ISPICKVAL( AIG_Dependency__c ,&apos;Key Date&apos;), 
ISBLANK(  AIG_Key_Date__c  ) 
)</errorConditionFormula>
    <errorDisplayField>AIG_Key_Date__c</errorDisplayField>
    <errorMessage>Please enter value for Key Date.</errorMessage>
</ValidationRule>