force-app/main/default/objects/AIG_Milestone_Template__mdt/validationRules/AIG_Related_Milestone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_Related_Milestone_Required</fullName>
    <active>true</active>
    <description>Related Milestone is required if Dependency is selected as Related Task</description>
    <errorConditionFormula>AND( 
ISPICKVAL( AIG_Dependency__c ,&apos;Related Milestone&apos;), 
ISBLANK( AIG_Related_Milestone__c ) 
)</errorConditionFormula>
    <errorDisplayField>AIG_Related_Milestone__c</errorDisplayField>
    <errorMessage>Please enter value for Related Milestone.</errorMessage>
</ValidationRule>