force-app/main/default/objects/AIG_Milestone_Template__mdt/validationRules/AIG_Select_Key_Date_or_Related_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_Select_Key_Date_or_Related_Milestone</fullName>
    <active>true</active>
    <description>Select either Key Date or Related Milestone</description>
    <errorConditionFormula>NOT(
OR(
 ISBLANK( AIG_Key_Date__c ) ,
  ISBLANK( AIG_Related_Milestone__c )  )
)</errorConditionFormula>
    <errorMessage>Select either Key Date or Related Milestone.</errorMessage>
</ValidationRule>