force-app/main/default/objects/AIG_Milestone_Template__mdt/listViews/AIG_GreaterThan100mHardCopy_Milestone_Tasks.listView-meta.xml
<ListView>
    <fullName>AIG_GreaterThan100mHardCopy_Milestone_Tasks</fullName>
    <columns>AIG_Criteria_Name__c</columns>
    <columns>AIG_Active__c</columns>
    <columns>AIG_SobjectType__c</columns>
    <columns>AIG_Milestone_Sequence__c</columns>
    <columns>AIG_Milestone_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>AIG_Dependency__c</columns>
    <columns>AIG_Related_Milestone__c</columns>
    <columns>AIG_Key_Date__c</columns>
    <columns>AIG_Days_After__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AIG_Criteria_Name__c</field>
        <operation>equals</operation>
        <value>GreaterThan100mHardCopy</value>
    </filters>
    <label>GreaterThan100mHardCopy Milestone Tasks</label>
</ListView>